--- a/Reactive.Webapi/Reactive.Webapi.csproj
+++ b/Reactive.Webapi/Reactive.Webapi.csproj
@@ -10,7 +10,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
-    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.7.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Reactive.DAL\Reactive.DAL.csproj" />
     <ProjectReference Include="..\StorageProviders\StorageProviders.csproj" />
   </ItemGroup>
 
