--- a/StorageProviders/Reactive.UserIdentity.csproj
+++ b/StorageProviders/Reactive.UserIdentity.csproj
@@ -2,10 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>Reactive.UserIdentity</AssemblyName>
+    <RootNamespace>Reactive.UserIdentity</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.7.1" />
+    <ProjectReference Include="..\..\Reactive.DAL\Reactive.DAL.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
