--- a/Reactive.Webapi/Reactive.Webapi.csproj
+++ b/Reactive.Webapi/Reactive.Webapi.csproj
@@ -18,9 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Reactive.DAL\Reactive.DAL.csproj" />
-    <ProjectReference Include="..\Models\Models.csproj" />
-    <ProjectReference Include="..\StorageProviders\Reactive.UserIdentity.csproj" />
+    <ProjectReference Include="..\Reactive.DAL\Reactive.DAL.csproj" />
+    <ProjectReference Include="..\Reactive.Models\Reactive.Models.csproj" />
+    <ProjectReference Include="..\Reactive.UserIdentity\Reactive.UserIdentity.csproj" />
   </ItemGroup>
 
 </Project>
